--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,7 +1,8 @@
 name: hello-world
-on: push
+'on': push
+jobs:
   my-job:
     runs-on: ubuntu-latest
     steps:
       - name: my-step
-      run: echo "hello world!"
+        run: echo "hello world!"
